@@ -1,6 +1,8 @@
 Revision history for Perl extension PGXN::API
 
 0.5.5
+      - Changed doc JSON to have a hash for each value: a title and an
+        abstract (if there is one).
 
 0.5.4   2011-03-17T00:08:30
       - Updated to work with new default URI templates deployed in
